2026-06-27_docker_kubernetes_t-mobile/lab0/workspace/gwapi_exaple/demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-gw
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-gw
  template:
    metadata:
      labels:
        app: hello-gw
    spec:
      containers:
      - name: hello-gw
        image: ghcr.io/ondrejsika/training-example
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-gw
spec:
  selector:
    app: hello-gw
  ports:
  - port: 80
