2026-06-27_docker_kubernetes_t-mobile/lab0/workspace/gwapi_exaple/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-gw
spec:
  parentRefs:
  - name: prod-gateway
    namespace: nginx-gateway
  hostnames:
  - "example.wo0-demo.sikademo.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hello-gw
      port: 80
